# libSMCE

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  README.md  sonar-project.properties
.github/workflows/: build.yml  code-smell.yml  smell-check.yml
CMake/BuildProfiles/: DebianBookworm.cmake  DebianBullseye.cmake  DebianBuster.cmake  Fedora33.cmake  FedoraHost.cmake  UbuntuFocal.cmake  UbuntuGroovy.cmake  UbuntuHirsute.cmake  UbuntuImpish.cmake
CMake/Modules/: UserConfigVars.cmake
CMake/Runtime/: CMakeLists.txt
ci/: codecov.yml  setup-cmake-interceptor.sh
extra/samples/mkrrgb/: CMakeLists.txt  README.md  main.cpp
extra/samples/mkrrgb/library_patches/arduino_graphics/src/: ArduinoGraphics.h
extra/samples/mkrrgb/library_patches/arduino_mkrrgb/src/: MKRRGBMatrix.h
extra/samples/mkrrgb/sketches/smile/: smile.ino
include/Ardrivo/: ArduinoGraphics.h  Arduino_MKRRGB.h  Font.h  Image.h  MKRRGB.h  MKRRGBMatrix.h  MkrRgb.h  WString.h
include/SMCE/: BoardView.hpp  Sketch.hpp
src/Ardrivo/: ArduinoGraphics.cpp  Font_4x6.c  Font_5x7.c  Image.cpp  MKRRGBMatrix.cpp  MQTT.cpp  MkrRgb.cpp  Print.cpp  Stream.cpp  String.cpp
src/SMCE/: BoardView.cpp
test/: Arduino.cpp  BoardView.cpp  CMakeLists.txt  Graphics.cpp  String.cpp  Toolchain.cpp
test/patches/arduino_graphics/src/: ArduinoGraphics.cpp  ArduinoGraphics.h
test/sketches/mkrrgb/: mkrrgb.ino
test/sketches/patch/: patch.ino
test/sketches/str_startwith/: str_startwith.ino
test/sketches/str_test/: str_test.ino
test/sketches/sty/: str_test.ino
(+2 files in other folders)
